--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </a>
     </div>
   </nav>
+  <div class="warning">This is anonymous server There Will be no record of any messages</div>
   <div class="container"></div>
   <div class="send">
     <form action="#" id="send-container">
